--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Artbet</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">ARTBET</string>
+    <string name="title_home">Latest</string>
+    <string name="title_dashboard">Auctions</string>
+    <string name="title_notifications">Profile</string>
 </resources>
